<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/total_score"
        android:text="@string/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"/>
    <TextView
        android:id="@+id/turn_score"
        android:text="@string/turn_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingBottom="16dp"
        />
    <TextView
        android:id="@+id/turn_number"
        android:text="@string/turn_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingBottom="100dp"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="30dp"
        android:gravity="center"
        android:weightSum="3"
        >
        <uppgift1.greed.Die
            android:id="@+id/first_dice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:selectableItemBackground"
            android:src="@drawable/white1"
            android:onClick="holdDice"
            />
        <uppgift1.greed.Die
            android:id="@+id/second_dice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:selectableItemBackground"
            android:src="@drawable/white1"
            android:onClick="holdDice"
            />
        <uppgift1.greed.Die
            android:id="@+id/third_dice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:selectableItemBackground"
            android:src="@drawable/white1"
            android:onClick="holdDice"
            />
        </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="3"
        >
        <uppgift1.greed.Die
            android:id="@+id/fourth_dice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:selectableItemBackground"
            android:src="@drawable/white1"
            android:onClick="holdDice"
            />
        <uppgift1.greed.Die
            android:id="@+id/fifth_dice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:selectableItemBackground"
            android:src="@drawable/white1"
            android:onClick="holdDice"
            />
        <uppgift1.greed.Die
            android:id="@+id/sixth_dice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:selectableItemBackground"
            android:src="@drawable/white1"
            android:onClick="holdDice"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center|bottom"
        >

        <Button
            android:id="@+id/save_button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_save"
            android:onClick="saveDice"/>
        <Button
            android:id="@+id/score_button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/button_score"
            android:onClick="scoreButton"/>
        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/button_throw"
            android:onClick="throwDice"/>
    </LinearLayout>
</LinearLayout>
